<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitys.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:navGraph="@navigation/navigation_graph" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_bus_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/margin_default_one"
        app:cardElevation="@dimen/ten"
        app:contentPadding="@dimen/three"
        app:elevation="@dimen/ten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/five"
            android:layout_marginEnd="@dimen/five"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_search_bus"
                android:layout_width="@dimen/twenty_eight"
                android:layout_height="@dimen/thirty_six"
                android:layout_marginStart="@dimen/five"
                android:contentDescription="@string/imageView_description_image_bus"
                android:elevation="@dimen/ten"
                android:src="@drawable/ic_baseline_directions_bus_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editText_search_bus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/five"
                android:layout_marginEnd="@dimen/margin_default"
                android:foregroundTint="@color/black"
                android:hint="@string/hint_search"
                android:inputType="textShortMessage"
                android:textSize="@dimen/font_size_sixteen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_enter_search"
                app:layout_constraintStart_toEndOf="@id/imageView_search_bus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginEnd="@dimen/ten" />

            <Button
                android:id="@+id/button_enter_search"
                android:layout_width="@dimen/thirty_six"
                android:layout_height="@dimen/thirty_six"
                android:backgroundTint="@color/gray_light"
                android:insetLeft="@dimen/zero"
                android:insetTop="@dimen/zero"
                android:insetRight="@dimen/zero"
                android:insetBottom="@dimen/zero"
                android:padding="@dimen/zero"
                app:elevation="@dimen/ten"
                app:icon="@drawable/ic_search"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/zero"
                app:iconSize="@dimen/eighteen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button_open_history"
        android:layout_width="@dimen/thirty_six"
        android:layout_height="@dimen/thirty_six"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/ten"
        android:backgroundTint="@color/gray_light"
        android:insetLeft="@dimen/zero"
        android:insetTop="@dimen/zero"
        android:insetRight="@dimen/zero"
        android:insetBottom="@dimen/zero"
        android:padding="@dimen/zero"
        app:elevation="@dimen/ten"
        app:icon="@drawable/ic_three_lines"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bus_lines"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />


    <com.google.android.material.chip.Chip
        android:id="@+id/chip_line_selected"
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/three"
        android:layout_marginBottom="@dimen/margin_default"
        android:elevation="@dimen/ten"
        android:text="1502-15"
        android:textSize="@dimen/font_size_sixteen"
        app:chipBackgroundColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/button_open_history"
        app:layout_constraintTop_toBottomOf="@id/search_bus_lines" />

    <!-- Segunda opção caso histórico com o PopupMenu não funcionar
    <include
        android:id="@+id/chip_group_history"
        layout="@layout/layout_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/three"
        app:layout_constraintStart_toEndOf="@+id/button_open_history"
        app:layout_constraintTop_toBottomOf="@id/search_bus_lines" />

    -->

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_quantity_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:elevation="@dimen/ten"
        android:text="@string/zero"
        android:textSize="@dimen/font_size_sixteen"
        app:chipBackgroundColor="@color/white"
        app:chipIcon="@drawable/ic_baseline_directions_bus_24"
        app:iconStartPadding="@dimen/three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_options_app"
        android:layout_width="@dimen/forty_dp"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginBottom="@dimen/margin_sixteen_dp"
        android:contentDescription="@string/description_floating_button_option_app"
        android:src="@drawable/ic_options"
        app:elevation="@dimen/ten"
        app:fabCustomSize="@dimen/forty_dp"
        app:layout_constraintBottom_toTopOf="@id/floating_current_location"
        app:layout_constraintEnd_toEndOf="@id/floating_refresh_bus"
        app:layout_constraintStart_toStartOf="@id/floating_refresh_bus" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_current_location"
        android:layout_width="@dimen/forty_dp"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginBottom="@dimen/margin_sixteen_dp"
        android:contentDescription="@string/description_floating_button_current_location"
        android:src="@drawable/ic_current_location"
        app:elevation="@dimen/ten"
        app:fabCustomSize="@dimen/forty_dp"
        app:layout_constraintBottom_toTopOf="@id/floating_refresh_bus"
        app:layout_constraintEnd_toEndOf="@id/floating_refresh_bus"
        app:layout_constraintStart_toStartOf="@id/floating_refresh_bus" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_refresh_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default_one"
        android:contentDescription="@string/description_floating_button_refresh"
        android:src="@drawable/ic_baseline_refresh_24"
        app:elevation="@dimen/ten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>